k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - host: loocode.de
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
